# qt-nbc

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  deploy.ps1  expected_output.txt  install.sh  installer_script.iss  move_required_libs_for_windows.ps1  output.txt  required_libs_for_windows.txt
.github/workflows/: cmake.yml  release.yml
design/: MainWindow.ui  NBCalculator.ui  NBConverter.ui  choose.ui  nbcalculator.ui  nbconverter.ui
include/: Application.hpp  MainWindow.hpp  NBCalculator.hpp  NBConverter.hpp  astnode.hpp  choose.hpp  expressioncalculator.hpp  expressionhandler.hpp  expressions.hpp  nbcalculator.hpp  nbconverter.hpp  token.hpp
lib/: CMakeLists.txt
lib/ASTHandler/: CMakeLists.txt
lib/ASTHandler/include/: astnode.hpp  parser.hpp  tokenizer.hpp
lib/ASTHandler/src/: parser.cpp  tokenizer.cpp
lib/Linux/: libgcc_s.so.1  libicui18n.so.72.1  libicuuc.so.72.1  libmd4c.so.0.4.8
lib/Number/: BaseClass.h  Binary.h  CMakeLists.txt  Decimal.h  Hexadecimal.h  Number.h
lib/Number/Base/: BaseClass.cpp
lib/Number/Binary/: Binary.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
lib/Number/Decimal/: Decimal.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
lib/Number/Hexadecimal/: Hexadecimal.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
lib/Number/Octal/: Octal.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
lib/Number/include/: BaseClass.hpp  Binary.hpp  Decimal.hpp  Hexadecimal.hpp  Number.hpp  NumberBase.hpp  Octal.hpp
lib/Number/src/: Binary.cpp  Decimal.cpp  Hexadecimal.cpp  NumberBase.cpp  Octal.cpp
lib/Number/src/Base/: BaseClass.cpp
lib/Number/src/Binary/: Binary.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
lib/Number/src/Decimal/: Decimal.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
lib/Number/src/Hexadecimal/: Hexadecimal.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
lib/Number/src/Octal/: Octal.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
lib/Tester/: CMakeLists.txt
lib/Tester/include/: test.hpp
lib/Tester/src/: test.cpp
res/: CMakeLists.txt  XNBC.desktop  icon.rc  res.qrc
src/: .gitignore  AboutDialog.cpp  Application.cpp  CMakeLists.txt  ExpressionCalculator.cpp  ExpressionHandler.cpp  MainWindow.cpp  NBCalculator.cpp  NBConverter.cpp  choose.cpp  expressioncalculator.cpp  expressionhandler.cpp  main.cpp  nbcalculator.cpp  nbconverter.cpp  parser.cpp  tokenizer.cpp
src/cpp-files/: choose.cpp  main.cpp  mainwindow.cpp  nbc.cpp  nbcalculator.cpp  nbconverter.cpp  test.cpp  test_cases.cpp
src/cpp-files/Number/: BaseClass.cpp  Binary.cpp  Decimal.cpp  Hexadecimal.cpp  Number.cpp  Octal.cpp
src/cpp-files/Number/Binary/: Binary.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
src/cpp-files/Number/Decimal/: Decimal.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
src/cpp-files/Number/Hexadecimal/: Hexadecimal.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
src/cpp-files/Number/Octal/: Octal.cpp  dividing.cpp  multiplying.cpp  remainder.cpp  subtracting.cpp  summing.cpp
src/design-files/: choose.ui  mainwindow.ui  nbcalculator.ui  nbconverter.ui  resources.qrc
src/header-files/: choose.h  mainwindow.h  nbc.h  nbcalculator.h  nbconverter.h  test_cases.h
src/header-files/Number/: BaseClass.h  Binary.h  Decimal.h  Hexadecimal.h  Number.h  Octal.h
src/inc/: BaseClass.h  Decimal.h  Hexadecimal.h  Number.h  Octal.h
test/: CMakeLists.txt  test_cases.cpp
test/expressioncalculator/: CMakeLists.txt  addition.hpp  divide.hpp  main.cpp  multiple.hpp  multiply.hpp  numbers.hpp  remainder.hpp  subtraction.hpp
test/number/: CMakeLists.txt  test.cpp  test_cases.cpp  test_cases.hpp
test/operationhandler/: CMakeLists.txt  test.cpp
test/tester/: CMakeLists.txt  main.cpp
